# LABA_10_HOSPITAL

./: CMakeLists.txt  README.md  appointment_manager.cpp  appointment_manager.h  clinic.cpp  clinic.h  clinic_listener.h  clinic_tests.cpp  doctor.cpp  doctor.h  employee.h  patient.cpp  patient.h  person.h  staff_manager.cpp  staff_manager.h  testing_tool.h
